# dev-kit

./: .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE.md.template  CONTRIBUTING.md  LICENSE  README.md  package.json  pyproject.toml
.claude/: settings.json
.claude/agents/: adk-agent.md  git-guardian-agent.md  reviewer-agent.md
.claude/commands/: create_template.md  optimize_template.md  review.md  status.md
.claude/hooks/: README.md  config.json  prompt-guard.js  session-state.sh  task-doc-validator.js
.claude/skills/adk-agent-orchestrator/: SKILL.md
.claude/skills/adk-bottleneck-analysis/: SKILL.md
.claude/skills/adk-evaluation-testing/: SKILL.md
.claude/skills/adk-production-setup/: SKILL.md
.claude/skills/adk-workflow-design/: SKILL.md
.claude/skills/bugfix/: SKILL.md
.claude/skills/clarify/: SKILL.md
.claude/skills/cleanup/: SKILL.md
.claude/skills/cleanup-python/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/generate-diagram/: SKILL.md
.claude/skills/plan-checker/: SKILL.md
.claude/skills/scroll-stop-builder/: SKILL.md
.claude/skills/scroll-stop-builder/references/: sections-guide.md
.claude/skills/tasks-to-issues/: SKILL.md
.cursor/rules/: CHANGELOG.md  README.md  python-import-collections-abc-types.mdc  python-use-genai.mdc  react-use-refobject-not-mutablerefobject.mdc  typescript-no-type-bypasses.mdc
agents/: doc-syncer-agent.md  implementer-agent.md  orientador-agent.md  researcher-agent.md  task-agent.md
commands/: README.md  adk_orchestrator_template.md  calibrate_templates.md  create_skill_template.md  create_task.md  setup_project.md  sync_upstream.md  task_template.md  task_template_adk.md  task_template_django.md  task_template_php.md  task_template_python.md  task_template_typescript.md  task_template_wordpress.md  testing_setup.md
docs/: CI_SETUP.md
hooks/: config.example.json  context-monitor.js  scaffolding-guard.ps1  scaffolding-guard.sh  session-state.ps1
hooks/tests/: README.md  context-monitor.test.js  helper.js  package.json  prompt-guard.test.js  scaffolding-guard.test.js  session-state.test.js  task-doc-validator.test.js
hooks/tests/fixtures/: missing-criteria.md  valid-task-doc.md
scripts/: generate_adapters.py
skills/adk-prompt-cleanup/: SKILL.md
skills/adk-skills-toolset/: SKILL.md
skills/adk-skills-toolset/references/: agentskills-spec.md
skills/cleanup-django/: SKILL.md
skills/cleanup-php/: SKILL.md
skills/diff/: SKILL.md
skills/django-migration-workflow/: SKILL.md
skills/drizzle-migration-rollback/: SKILL.md
skills/gcp-debugging/: SKILL.md
skills/improve-ui/: SKILL.md
skills/onboarding/: SKILL.md
skills/pr/: SKILL.md
skills/scroll-stop-web-animations/: SKILL.md
skills/task-implementation-review/: SKILL.md
skills/unit-testing/: SKILL.md
skills/unit-testing/references/: patterns-by-stack.md
skills/worktree-management/: SKILL.md
src/madkit/: __init__.py  cli.py  embeds.py  i18n.py
src/madkit/adapters/: __init__.py  base.py  claude.py  cline.py  codex.py  continue_dev.py  cursor.py  detector.py  windsurf.py
src/madkit/commands/: __init__.py  doctor.py  estado.py  iniciar.py  listar_ides.py  sincronizar.py
src/madkit/templates/cline/: clinerules.template
src/madkit/templates/codex/: AGENTS.md.template
src/madkit/templates/continue/: continue_config.yaml.template
src/madkit/templates/cursor/rules/: CLAUDE_md_context.mdc  drizzle-use-package-json-scripts.mdc  python-function-return-type-annotations.mdc  python-no-type-ignore.mdc  python-type-annotations-required.mdc  swe-eslint-disable-rules.mdc
src/madkit/templates/windsurf/: windsurfrules.template
src/madkit/validators/: __init__.py  frontmatter.py
tests/: test_adapter_claude.py  test_adapter_claude_subdirs.py  test_adapter_cline.py  test_adapter_codex.py  test_adapter_continue.py  test_adapter_cursor.py  test_adapter_windsurf.py  test_build.py  test_cli.py  test_detector.py  test_generate_adapters.py  test_i18n.py  test_iniciar.py  test_validators.py
