[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "madkit"
version = "0.2.0"
description = "Multi-Agent Development Kit — CLI para scaffolding multi-IDE + framework de templates con continuidad inter-sesión vía memoria persistente."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Guillermo Montero" }]
keywords = ["claude-code", "cursor", "codex", "agents", "templates", "scaffold", "ai-coding", "mad"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "platformdirs>=4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "build>=1.2",
]

[project.scripts]
madkit = "madkit.cli:app"

[project.urls]
Homepage = "https://github.com/multi-agent-development-kit/dev-kit"
Repository = "https://github.com/multi-agent-development-kit/dev-kit"
Issues = "https://github.com/multi-agent-development-kit/dev-kit/issues"
Discussions = "https://github.com/multi-agent-development-kit/dev-kit/discussions"
Changelog = "https://github.com/multi-agent-development-kit/dev-kit/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/madkit"]

[tool.hatch.build.targets.wheel.force-include]
# Adapters multi-IDE no-Claude (scaffolds del CLI) — bundle directo:
"src/madkit/templates" = "madkit/templates"

# Templates de Claude viven en raíz como fuente canónica. Hatchling los copia
# al wheel bajo `madkit/templates/claude/<sub>/` para preservar el contrato
# de `importlib.resources` que usa `embeds.py:templates_root_for("claude")`.
"agents" = "madkit/templates/claude/agents"
"commands" = "madkit/templates/claude/commands"
"skills" = "madkit/templates/claude/skills"
"hooks" = "madkit/templates/claude/hooks"
"CLAUDE.md.template" = "madkit/templates/claude/CLAUDE.md.template"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: tests más lentos (build de wheel, e2e). Skip con `-m 'not slow'`.",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
